# rusty-dotfiler

./: .gitignore  Cargo.toml  README.md  example-filemap.toml
src/: error.rs  filemap.rs  main.rs
