[package]
name = "rusty-dotfiler"
version = "0.1.0"
edition = "2021"
authors = ["quatzshard <quartzshard@quartzshard.com>"]
description = "Hardlinks files from a central repo for config management"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
dirs = "4.0.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_derive = "1.0.152"
toml = "0.5.10"
